fix header.jsp navbar overlap

--- a/AboutTime/src/main/webapp/resources/static/css/header.css
+++ b/AboutTime/src/main/webapp/resources/static/css/header.css
@@ -5,7 +5,7 @@ header{
 }
 
 .navbar{
-    background-color: #fff;
+    background-color: #ffffff;
     border:none;
     padding-bottom:10px;
     font-weight:500;
@@ -24,7 +24,7 @@ header{
 .navbar-nav{
     padding-right:10px;
     margin-top:10px;
-    background-color:#fff;
+    background-color:#ffffff;
 }
 
 .navbar-nav li{
